--- a/number-counting/index.html
+++ b/number-counting/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<section class="sec">
 			<h1>Counter</h1>
-			<span id="color-el">0</span>
+			<span id="count-el">0</span>
 			<div class="btn-container">
 				<button class="btn plus-btn">plus</button>
 				<button class="btn reset-btn">reset</button>
