--- a/color-flipper/simple.html
+++ b/color-flipper/simple.html
@@ -19,7 +19,7 @@
 		</header>
 		<main>
 			<div class="color-code">
-				<p>background-color: <span>#ffffff</span></p>
+				<p>background-color: <span id="color-name">#ffffff</span></p>
 			</div>
 			<div class="btn-container">
 				<button type="button" class="btn">click me</button>
@@ -28,5 +28,7 @@
 		<footer>
 			<small>&copy; Copyright 2021</small>
 		</footer>
+
+		<script src="app.js"></script>
 	</body>
 </html>
