--- a/color-flipper/hex.html
+++ b/color-flipper/hex.html
@@ -19,12 +19,14 @@
 		</header>
 		<main>
 			<div class="color-code">
-				<p>background-color: <span>#ffffff</span></p>
+				<p>background-color: <span id="color-name">#ffffff</span></p>
 			</div>
 			<div class="btn-container">
 				<button type="button" class="btn">click me</button>
 			</div>
 		</main>
 		<footer>&copy; Copyright 2021</footer>
+
+		<script src="hex.js"></script>
 	</body>
 </html>
